fixing spacing in logo pond

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1816,7 +1816,7 @@ $theme_grid_bp : '760px';
 
 .hp-logo-pond {
 	border-top:1px solid #222;
-	padding:25px 20px 20px;
+	padding:25px 20px 10px 20px;
 	border-bottom:1px solid #222;
 	background-color:#161616;
 }
